--- a/vue-simple/vue2/index.html
+++ b/vue-simple/vue2/index.html
@@ -6,39 +6,41 @@
   </head>
   <body>
     <div id="app" class="container">
-      <div class="row">
+      <div class="row"  v-if="view == 'tabela'">
 
         <h1>Camp Serie A</h1>
+        <a class="btn btn-primary" @click="createNovoJogo">Novo Jogo</a>
         <br><br>
-        <table class="table table-striped">
-          <thead>
-          <tr>
-            <th>Time</th>
-            <th>Pontos</th>
-            <th>GP</th>
-            <th>GC</th>
-            <th>SG</th>
-          </tr>
-          </thead>
-          <tbody>
-          <tr v-for="item in times" >
-            <td>
-              <img :src="item.escudo" style="height: 25px; width: 25px;border: 1px">
-              <strong>{{item.nome}}</strong>
-            </td>
-            <td>{{item.pontos}}</td>
-            <td>{{item.gp}}</td>
-            <td>{{item.gc}}</td>
-            <td>saldo</td>
-          </tr>
-          </tbody>
-        </table>
+          <input type="text" class="form-control" v-model="filter">
+          <table class="table table-striped">
+            <thead>
+            <tr>
+              <th v-for="col in colunas">
+                <a href="#" @click.prevent="sortBy(col)">{{col | ucwords}}
+                </a>
+              </th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr v-for="item in timesFiltered" >
+              <td>
+                <img :src="item.escudo" style="height: 25px; width: 25px;border: 1px">
+                <strong>{{item.nome}}</strong>
+              </td>
+              <td>{{item.pontos}}</td>
+              <td>{{item.gp}}</td>
+              <td>{{item.gc}}</td>
+              <td>{{item | saldo}}</td>
+            </tr>
+            </tbody>
+          </table>
+
       </div>
 
-      <div class="row">
+      <div v-if="view == 'novoJogo'">
         <form class="form-inline">
           <div class="form-group">
-            <input class="form-control">
+            <input class="form-control" v-model="novoJogo.casa.gols">
             <label class="control-label">
               {{novoJogo.casa.time.nome}}
               <img :src="novoJogo.casa.time.escudo" style="height: 25px; width: 25px;border: 1px">
@@ -50,9 +52,9 @@
               <img :src="novoJogo.fora.time.escudo" style="height: 25px; width: 25px;border: 1px">
               {{novoJogo.fora.time.nome}}
             </label>
-            <input class="form-control">
+            <input class="form-control"  v-model="novoJogo.fora.gols">
           </div>
-          <button type="button" class="btn btn-primary">Fim de jogo</button>
+          <button type="button" class="btn btn-primary" @click="fimJogo">Fim de jogo</button>
         </form>
       </div>
       <script src="/dist/build.js"></script>
